--- a/WritersPlatform/Views/Roles/Create.cshtml
+++ b/WritersPlatform/Views/Roles/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model string
 @{
-    ViewData["Title"] = "Создание ролм";
+    ViewData["Title"] = "Создание роли";
 }
 
 <div asp-validation-summary="All" class="text-danger"></div>
