--- a/WritersPlatform/Views/Shared/_Layout.cshtml
+++ b/WritersPlatform/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html class="h-100" lang="en">
 <head role="banner">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css"/>
 </head>
-<body>
+<body class="h-100">
     <partial name="_HeaderPartial"/>
 
     <div class="container">
@@ -16,6 +16,7 @@
         </main>
     </div>
 
+    <div style="max-height:100%; min-height:52%;"></div>
     <partial name="_FooterPartial" />
 
     <script src="~/js/bootstrap.min.js"></script>
